# cassandra

./: .cassandra.google.provider.settings.json  .gitignore  .golangci.yml  AGENTS.md  BUILD.bazel  CLAUDE.md  CODE_STYLE.md  DESIGN.md  MODULE.bazel  README.md  REVIEWERS.md  action.yml  cassandra.toml  go.mod  go.sum  main.go  mcp.json  multitool.lock.json
.antigravitycli/: f6ed83ed-7c9e-4b3e-a44b-6be3088081de.json
.cassandra/: codify-patterns.md  haiku-praise.md  initial_developer_focus.md  self-preservation.md
.github/: FUNDING.yml
.github/workflows/: cassandra_review.yml  ci.yml  copilot-setup-steps.yml  release.yml  run_evals.yml
cmd/ai_reviewer/: BUILD.bazel  main.go  main_test.go
cmd/eval/: BUILD.bazel  main.go
cmd/github/: BUILD.bazel  main.go  main_test.go
cmd/mcp_godoc/: BUILD.bazel  main.go
cmd/update_eval_docs/: BUILD.bazel  main.go
conductor/: eval-suites.md
core/: BUILD.bazel  agent.go  agent_test.go  console_reporter.go  console_reporter_test.go  github.go  io_util.go  io_util_test.go  metrics_test.go  review_types.go  review_types_test.go  reviewer.go  reviewer_test.go  tui.go
core/config/: BUILD.bazel  config.go  config_test.go
core/eval/: BUILD.bazel  EVALUATIONS.md  README.md  runner.go  sandbox.go  sandbox_test.go  types.go
core/eval/results/: baseline_20260510_123029Z_run1.json  baseline_20260510_123029Z_run2.json  baseline_20260510_123029Z_run3.json  baseline_20260510_133222Z_run1.json  baseline_20260510_133222Z_run2.json  baseline_20260510_133222Z_run3.json  baseline_20260511_180458Z_run1.json  baseline_20260511_180458Z_run2.json  baseline_20260511_180458Z_run3.json  baseline_20260511_192808Z_run1.json  baseline_20260511_192808Z_run2.json  baseline_20260511_192808Z_run3.json  baseline_20260521_191629Z_run1.json  baseline_20260521_191629Z_run2.json  baseline_20260521_191629Z_run3.json  baseline_20260615_193203Z_run1.json  baseline_20260615_193203Z_run2.json  baseline_20260615_193203Z_run3.json  baseline_20260615_193203Z_run4.json  baseline_20260615_193203Z_run5.json  baseline_mcp_invoking_20260511_180458Z_run1.json  baseline_mcp_invoking_20260511_180458Z_run2.json  baseline_mcp_invoking_20260511_180458Z_run3.json  baseline_mcp_invoking_20260511_192808Z_run1.json  baseline_mcp_invoking_20260511_192808Z_run2.json  baseline_mcp_invoking_20260511_192808Z_run3.json  baseline_mcp_invoking_20260521_191629Z_run1.json  baseline_mcp_invoking_20260521_191629Z_run2.json  baseline_mcp_invoking_20260521_191629Z_run3.json  baseline_mcp_invoking_20260615_193203Z_run1.json  baseline_mcp_invoking_20260615_193203Z_run2.json  baseline_mcp_invoking_20260615_193203Z_run3.json  baseline_mcp_invoking_20260615_193203Z_run4.json  baseline_mcp_invoking_20260615_193203Z_run5.json  cassandra_20260509_175713.json  cassandra_20260509_224751.json  cassandra_20260509_225207.json  cassandra_20260509_231744.json
core/eval/testdata/: evaluations.json  mcp_evaluations.json
core/eval/testdata/cases/external-url-verification/: input.diff
core/eval/testdata/cases/interface-contract/: input.diff
core/eval/testdata/cases/interface-contract/base/: BUILD.bazel  repository.go
core/eval/testdata/cases/library-godoc-verification/: input.diff
core/eval/testdata/cases/library-godoc-verification/base/lib/db/: BUILD.bazel  db.go
core/eval/testdata/cases/local-agents-convention/: input.diff
core/eval/testdata/cases/local-agents-convention/base/internal/db/: AGENTS.md  BUILD.bazel  db.go
core/eval/testdata/cases/security-path-traversal/: input.diff
core/eval/testdata/cases/security-path-traversal/base/: BUILD.bazel  server.go
core/eval/testdata/cases/simple-bug/: input.diff  metadata.json
core/eval/testdata/cases/simple-bug/base/: BUILD.bazel  math.go
core/prompts/: BUILD.bazel  approval_evaluation_prompt.md  code_review_main_guidelines.md  extraction_prompt.md  prompts.go  prompts_test.go  reviewer_prompt.md
llm/: AGENTS.md  BUILD.bazel  REVIEWERS.md  llm.go  llm_test.go  retry.go  retry_test.go
llm/anthropic/: BUILD.bazel  provider.go  provider_test.go
llm/factory/: BUILD.bazel  factory.go
llm/google/: BUILD.bazel  provider.go  provider_test.go
llm/internal/util/: BUILD.bazel  util.go  util_test.go
llm/openai/: BUILD.bazel  provider.go  provider_test.go
llmutil/: BUILD.bazel  client.go
reviewer_prompts/: BUILD.bazel  general.md
scripts/: run_evals.sh
tools/: AGENTS.md  BUILD.bazel  REVIEWERS.md  ask_developer.go  ask_developer_test.go  diff.go  diff_test.go  emit_reviewer_state.go  emit_reviewer_state_test.go  local_tools.go  local_tools_safety_test.go  local_tools_test.go  main_test.go  registry.go  wishlist.go  wishlist_test.go
tools/mcp/: BUILD.bazel  client.go  client_test.go  config.go  config_test.go  main_test.go
tools/mcp_servers/godoc/: BUILD.bazel  server.go  server_test.go
util/: AGENTS.md  BUILD.bazel  fs.go  fs_test.go  git.go  git_test.go  lockfiles.go  lockfiles_test.go  strings.go
