load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@aspect_rules_lint//format:defs.bzl", "format_multirun")

format_multirun(
    name = "format",
    go = "@aspect_rules_lint//format:gofumpt",
)

load("@aspect_rules_lint//format:defs.bzl", "format_test")
format_test(
    name = "format_test",
    srcs = ["main.go"],
)

# gazelle:prefix github.com/mennyevendanan/cassandra
gazelle(name = "gazelle")

go_library(
    name = "cassandra_lib",
    srcs = ["main.go"],
    importpath = "github.com/mennyevendanan/cassandra",
    visibility = ["//visibility:private"],
    deps = [
        "//core",
        "//llmutil",
        "//tools",
    ],
)

go_binary(
    name = "ai-review-agent",
    embed = [":cassandra_lib"],
    visibility = ["//visibility:public"],
)
