load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

format_multirun(
    name = "format",
    go = "@aspect_rules_lint//format:gofumpt",
)

# gazelle:prefix github.com/menny/cassandra
gazelle(name = "gazelle")

go_library(
    name = "cassandra_lib",
    srcs = ["main.go"],
    importpath = "github.com/menny/cassandra",
    visibility = ["//visibility:private"],
    deps = [
        "//core",
        "//llmutil",
        "//tools",
    ],
)

go_binary(
    name = "ai-review-agent",
    embed = [":cassandra_lib"],
    visibility = ["//visibility:public"],
    pure = "on",
    static = "on",
)
