load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@gazelle//:def.bzl", "gazelle")

format_multirun(
    name = "format",
    go = "@aspect_rules_lint//format:gofumpt",
    starlark = "@multitool//tools/buildifier",
    yaml = "@multitool//tools/yamlfmt",
)

# gazelle:prefix github.com/menny/cassandra
gazelle(name = "gazelle")
