module(
    name = "cassandra",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.55.0")
bazel_dep(name = "aspect_rules_lint", version = "1.0.8")
bazel_dep(name = "gazelle", version = "0.41.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
# We will use gazelle update-repos via Go or manually manage the use_repo for Bzlmod if needed.
# For now, we leave the use_repo entries to be populated as we go get things.

use_repo(go_deps, "com_github_tmc_langchaingo")
