module(
    name = "cassandra",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.55.0")
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "gazelle", version = "0.41.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_spf13_pflag",
)
use_repo(go_deps, "com_github_anthropics_anthropic_sdk_go")
use_repo(go_deps, "org_golang_google_genai")
use_repo(go_deps, "com_github_google_go_github_v69", "com_github_migueleliasweb_go_github_mock", "com_github_stretchr_testify")
