load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "agent.go",
        "github.go",
        "review_types.go",
        "reviewer.go",
    ],
    importpath = "github.com/menny/cassandra/core",
    visibility = ["//visibility:public"],
    deps = [
        "//core/config",
        "//core/prompts",
        "//llm",
        "//llm/factory",
        "//tools",
        "//tools/mcp",
    ],
)

go_test(
    name = "core_test",
    srcs = [
        "agent_test.go",
        "main_test.go",
        "metrics_test.go",
        "review_types_test.go",
    ],
    embed = [":core"],
    deps = [
        "//llm",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_goleak//:goleak",
    ],
)
