load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "agent.go",
        "console_reporter.go",
        "github.go",
        "review_types.go",
        "reviewer.go",
        "tui.go",
    ],
    importpath = "github.com/menny/cassandra/core",
    visibility = ["//visibility:public"],
    deps = [
        "//core/config",
        "//core/prompts",
        "//llm",
        "//llm/factory",
        "//tools",
        "//tools/mcp",
        "@com_github_charmbracelet_bubbles//spinner",
        "@com_github_charmbracelet_bubbles//viewport",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_glamour//:glamour",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_charmbracelet_lipgloss//table",
        "@org_golang_x_term//:term",
    ],
)

go_test(
    name = "core_test",
    srcs = [
        "agent_test.go",
        "console_reporter_test.go",
        "main_test.go",
        "metrics_test.go",
        "review_types_test.go",
    ],
    embed = [":core"],
    deps = [
        "//core/config",
        "//llm",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_goleak//:goleak",
    ],
)
