load("@aspect_rules_lint//format:defs.bzl", "format_test")
load("@rules_go//go:def.bzl", "go_library")

format_test(
    name = "format_test",
    srcs = ["client.go"],
)

go_library(
    name = "llmutil",
    srcs = ["client.go"],
    importpath = "github.com/menny/cassandra/llmutil",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_tmc_langchaingo//llms",
        "@com_github_tmc_langchaingo//llms/anthropic",
        "@com_github_tmc_langchaingo//llms/googleai",
    ],
)
