load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tools",
    srcs = [
        "diff.go",
        "local_tools.go",
        "registry.go",
    ],
    importpath = "github.com/menny/cassandra/tools",
    visibility = ["//visibility:public"],
    deps = [
        "//llm",
    ],
)

go_test(
    name = "tools_test",
    srcs = [
        "diff_test.go",
        "local_tools_test.go",
    ],
    embed = [":tools"],
    deps = ["//llm"],
)
