load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tools",
    srcs = [
        "diff.go",
        "local_tools.go",
        "registry.go",
        "wishlist.go",
    ],
    importpath = "github.com/menny/cassandra/tools",
    visibility = ["//visibility:public"],
    deps = [
        "//llm",
        "//util",
    ],
)

go_test(
    name = "tools_test",
    srcs = [
        "diff_test.go",
        "local_tools_safety_test.go",
        "local_tools_test.go",
        "wishlist_test.go",
    ],
    embed = [":tools"],
    deps = [
        "//llm",
        "//util",
    ],
)
