load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tools",
    srcs = [
        "ask_developer.go",
        "diff.go",
        "emit_reviewer_state.go",
        "local_tools.go",
        "registry.go",
        "wishlist.go",
    ],
    importpath = "github.com/menny/cassandra/tools",
    visibility = ["//visibility:public"],
    deps = [
        "//llm",
        "//util",
        "@com_github_charmbracelet_huh//:huh",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@org_golang_x_term//:term",
    ],
)

go_test(
    name = "tools_test",
    srcs = [
        "ask_developer_test.go",
        "diff_test.go",
        "emit_reviewer_state_test.go",
        "local_tools_safety_test.go",
        "local_tools_test.go",
        "main_test.go",
        "wishlist_test.go",
    ],
    embed = [":tools"],
    deps = [
        "//llm",
        "//util",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_goleak//:goleak",
    ],
)
