load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "ai_reviewer_lib",
    srcs = ["main.go"],
    importpath = "github.com/menny/cassandra/cmd/ai_reviewer",
    visibility = ["//visibility:private"],
    deps = [
        "//core",
        "//core/prompts",
        "//llm",
        "//llm/factory",
        "//tools",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "ai_reviewer",
    basename = "cassandra",
    data = ["//reviewer_prompts:all_prompts"],
    embed = [":ai_reviewer_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ai_reviewer_test",
    srcs = ["main_test.go"],
    embed = [":ai_reviewer_lib"],
    deps = ["@com_github_stretchr_testify//require"],
)
