load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "update_eval_docs_lib",
    srcs = ["main.go"],
    importpath = "github.com/menny/cassandra/cmd/update_eval_docs",
    visibility = ["//visibility:private"],
    deps = ["//core/eval"],
)

go_binary(
    name = "update_eval_docs",
    embed = [":update_eval_docs_lib"],
    visibility = ["//visibility:public"],
)
