load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/menny/cassandra/core/config",
    visibility = ["//visibility:public"],
    deps = [
        "//core/prompts",
        "//llm",
        "//tools",
        "@com_github_spf13_viper//:viper",
    ],
)
