load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "prompts",
    srcs = ["prompts.go"],
    embedsrcs = [":all_prompts"],
    importpath = "github.com/menny/cassandra/core/prompts",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_prompts",
    srcs = glob(
        [
            "*.md",
            "library/*.md",
        ],
        exclude = ["library/README.md"],
    ),
)

go_test(
    name = "prompts_test",
    srcs = ["prompts_test.go"],
    embed = [":prompts"],
    deps = ["@com_github_stretchr_testify//require"],
)
