load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "prompts",
    srcs = ["prompts.go"],
    embedsrcs = [
        "approval_evaluation_prompt.md",
        "extraction_prompt.md",
        "library/README.md",
        "library/asana-do-try-consider.md",
        "library/conventional-comments.md",
        "library/general.md",
        "library/google.md",
        "library/minimalist.md",
        "library/palantir.md",
        "library/security-first.md",
        "reviewer_prompt.md",
        "library/eval_judge.md",
    ],
    importpath = "github.com/menny/cassandra/core/prompts",
    visibility = ["//visibility:public"],
    deps = ["//util"],
)

filegroup(
    name = "all_prompts",
    srcs = glob(
        [
            "*.md",
            "library/*.md",
        ],
        exclude = ["library/README.md"],
    ),
)

go_test(
    name = "prompts_test",
    srcs = ["prompts_test.go"],
    embed = [":prompts"],
    deps = ["@com_github_stretchr_testify//require"],
)
