load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "base_lib",
    srcs = ["server.go"],
    importpath = "github.com/menny/cassandra/core/eval/testdata/cases/security-path-traversal/base",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "base",
    embed = [":base_lib"],
    visibility = ["//visibility:public"],
)
