load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = ["db.go"],
    importpath = "github.com/menny/cassandra/core/eval/testdata/cases/local-agents-convention/base/internal/db",
    visibility = ["//core/eval/testdata/cases/local-agents-convention/base:__subpackages__"],
)
